--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               I am someone who has an interest in Graphic Design, Photography. Becoming someone who is competent in the interests I mentioned above is my dream.
             </p>
             <p>Currently I work more in the world of graphic design without putting aside my other interests to continue studying it</p>
-            <a href="https://www.mediafire.com/file/5khbh1jd6x38zky/CV_Angger_Riyanto_Putra.pdf/file " target="_blank" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
+            <a href="https://bit.ly/3CDULjh" target="_blank" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
             <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
           </div>
         </div>
@@ -277,7 +277,7 @@
           <div class="portfolio-filter">
             <span class="filter-item outer-shadow active" data-target="all">all</span>
             <span class="filter-item" data-target="logo">logo</span>
-            <span class="filter-item" data-target="vecktor">vecktor</span>
+            <span class="filter-item" data-target="socmed">Social Media</span>
             <span class="filter-item" data-target="T-Shirt">T-Shirt</span>
             <span class="filter-item" data-target="random">Random</span>
           </div>
@@ -349,14 +349,14 @@
           <!-- portfolio item end -->
 
           <!-- portfolio item start -->
-          <div class="portfolio-item" data-category="vecktor">
+          <div class="portfolio-item" data-category="random">
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
-                <img src="img/portfolio/thumb/project3.png" alt="portfolio" data-screenshots="img/portfolio/large/project-3/1.jpg,img/portfolio/large/project-3/2.jpg" />
+                <img src="img/portfolio/thumb/project29.png" alt="portfolio" data-screenshots="img/portfolio/large/project-29/1.jpg,img/portfolio/large/project-29/2.jpg,img/portfolio/large/project-29/3.jpg," />
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
-              <p class="portfolio-item-tittle">Vecktor Art</p>
+              <p class="portfolio-item-tittle">Wedding Invitation</p>
               <!-- portfolio detail start -->
               <div class="portfolio-item-details">
                 <div class="row">
@@ -367,9 +367,71 @@
                   <div class="info">
                     <h3>Project Brief</h3>
                     <ul>
-                      <li>Date : <span>2020</span></li>
+                      <li>Date : <span>2022</span></li>
                       <li>Client : <span>-</span></li>
-                      <li>Tools : <span>CorelDraw</span></li>
+                      <li>Tools : <span>Photoshop</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio detail end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="socmed">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project3.png" alt="portfolio" data-screenshots="img/portfolio/large/project-3/1.jpg,img/portfolio/large/project-3/2.jpg,img/portfolio/large/project-3/3.jpg" />
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-tittle">Instagram Story Design</p>
+              <!-- portfolio detail start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>-</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Brief</h3>
+                    <ul>
+                      <li>Date : <span>2022</span></li>
+                      <li>Client : <span>-</span></li>
+                      <li>Tools : <span>Adobe Photoshop</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio detail end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="random">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project30.png" alt="portfolio" data-screenshots="img/portfolio/large/project-30/1.jpg,img/portfolio/large/project-30/2.jpg,img/portfolio/large/project-30/3.jpg," />
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-tittle">Wedding Invitation</p>
+              <!-- portfolio detail start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>-</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Brief</h3>
+                    <ul>
+                      <li>Date : <span>2022</span></li>
+                      <li>Client : <span>-</span></li>
+                      <li>Tools : <span>Photoshop</span></li>
                     </ul>
                   </div>
                 </div>
@@ -442,6 +504,37 @@
           <!-- portfolio item end -->
 
           <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="random">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project31.png" alt="portfolio" data-screenshots="img/portfolio/large/project-31/1.jpg,img/portfolio/large/project-31/2.jpg,img/portfolio/large/project-31/3.jpg," />
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-tittle">Wedding Invitation</p>
+              <!-- portfolio detail start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>-</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Brief</h3>
+                    <ul>
+                      <li>Date : <span>2022</span></li>
+                      <li>Client : <span>-</span></li>
+                      <li>Tools : <span>Photoshop</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio detail end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
           <div class="portfolio-item" data-category="logo">
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
@@ -473,14 +566,14 @@
           <!-- portfolio item end -->
 
           <!-- portfolio item start -->
-          <div class="portfolio-item" data-category="vecktor">
+          <div class="portfolio-item" data-category="socmed">
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
                 <img src="img/portfolio/thumb/project7.png" alt="portfolio" data-screenshots="img/portfolio/large/project-7/1.jpg,img/portfolio/large/project-7/2.jpg,img/portfolio/large/project-7/3.jpg" />
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
-              <p class="portfolio-item-tittle">Vecktor Art</p>
+              <p class="portfolio-item-tittle">Social Media Posts</p>
               <!-- portfolio detail start -->
               <div class="portfolio-item-details">
                 <div class="row">
@@ -491,9 +584,9 @@
                   <div class="info">
                     <h3>Project Brief</h3>
                     <ul>
-                      <li>Date : <span>2020</span></li>
+                      <li>Date : <span>2022</span></li>
                       <li>Client : <span>-</span></li>
-                      <li>Tools : <span>CorelDraw</span></li>
+                      <li>Tools : <span>Photoshop</span></li>
                     </ul>
                   </div>
                 </div>
@@ -504,14 +597,14 @@
           <!-- portfolio item end -->
 
           <!-- portfolio item start -->
-          <div class="portfolio-item" data-category="vecktor">
+          <div class="portfolio-item" data-category="socmed">
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
                 <img src="img/portfolio/thumb/project8.png" alt="portfolio" data-screenshots="img/portfolio/large/project-8/1.jpg,img/portfolio/large/project-8/2.jpg,img/portfolio/large/project-8/3.jpg" />
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
-              <p class="portfolio-item-tittle">Vecktor Art</p>
+              <p class="portfolio-item-tittle">Instagram Posts</p>
               <!-- portfolio detail start -->
               <div class="portfolio-item-details">
                 <div class="row">
@@ -522,9 +615,9 @@
                   <div class="info">
                     <h3>Project Brief</h3>
                     <ul>
-                      <li>Date : <span>2020</span></li>
+                      <li>Date : <span>2022</span></li>
                       <li>Client : <span>-</span></li>
-                      <li>Tools : <span>CorelDraw</span></li>
+                      <li>Tools : <span>Photoshop</span></li>
                     </ul>
                   </div>
                 </div>
@@ -556,6 +649,37 @@
                       <li>Date : <span>2021</span></li>
                       <li>Client : <span>-</span></li>
                       <li>Tools : <span>Adobe Illustator,CorelDraw</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio detail end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="socmed">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project27.png" alt="portfolio" data-screenshots="img/portfolio/large/project-27/1.jpg,img/portfolio/large/project-27/2.jpg,img/portfolio/large/project-27/3.jpg" />
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-tittle">Instagram Posts Design</p>
+              <!-- portfolio detail start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>-</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Brief</h3>
+                    <ul>
+                      <li>Date : <span>2022</span></li>
+                      <li>Client : <span>-</span></li>
+                      <li>Tools : <span>Adobe Photoshop</span></li>
                     </ul>
                   </div>
                 </div>
@@ -619,6 +743,37 @@
                       <li>Date : <span>2021</span></li>
                       <li>Client : <span>-</span></li>
                       <li>Tools : <span>CorelDraw,Photoshop</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio detail end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="socmed">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project28.png" alt="portfolio" data-screenshots="img/portfolio/large/project-28/1.jpg,img/portfolio/large/project-28/2.jpg" />
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-tittle">Instagram Posts Design</p>
+              <!-- portfolio detail start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>-</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Brief</h3>
+                    <ul>
+                      <li>Date : <span>2022</span></li>
+                      <li>Client : <span>-</span></li>
+                      <li>Tools : <span>Adobe Photoshop</span></li>
                     </ul>
                   </div>
                 </div>
