--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           <div class="portfolio-item" data-category="random">
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
-                <img src="img/portfolio/thumb/project29.png" alt="portfolio" data-screenshots="img/portfolio/large/project-29/1.jpg,img/portfolio/large/project-29/2.jpg,img/portfolio/large/project-29/3.jpg," />
+                <img src="img/portfolio/thumb/project29.png" alt="portfolio" data-screenshots="img/portfolio/large/project-29/1.jpg,img/portfolio/large/project-29/2.jpg,img/portfolio/large/project-29/3.jpg" />
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
@@ -414,7 +414,7 @@
           <div class="portfolio-item" data-category="random">
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
-                <img src="img/portfolio/thumb/project30.png" alt="portfolio" data-screenshots="img/portfolio/large/project-30/1.jpg,img/portfolio/large/project-30/2.jpg,img/portfolio/large/project-30/3.jpg," />
+                <img src="img/portfolio/thumb/project30.png" alt="portfolio" data-screenshots="img/portfolio/large/project-30/1.jpg,img/portfolio/large/project-30/2.jpg,img/portfolio/large/project-30/3.jpg" />
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
