--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
-              <p class="portfolio-item-tittle">Wedding Invitation</p>
+              <p class="portfolio-item-tittle">Wedding Invitation 2</p>
               <!-- portfolio detail start -->
               <div class="portfolio-item-details">
                 <div class="row">
@@ -507,7 +507,7 @@
           <div class="portfolio-item" data-category="random">
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
-                <img src="img/portfolio/thumb/project31.png" alt="portfolio" data-screenshots="img/portfolio/large/project-31/1.jpg,img/portfolio/large/project-31/2.jpg,img/portfolio/large/project-31/3.jpg," />
+                <img src="img/portfolio/thumb/project31.png" alt="portfolio" data-screenshots="img/portfolio/large/project-31/1.jpg,img/portfolio/large/project-31/2.jpg,img/portfolio/large/project-31/3.jpg" />
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
