--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
-              <p class="portfolio-item-tittle">Wedding Invitation 2</p>
+              <p class="portfolio-item-tittle">Wedding Invitation</p>
               <!-- portfolio detail start -->
               <div class="portfolio-item-details">
                 <div class="row">
@@ -387,7 +387,7 @@
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
               </div>
-              <p class="portfolio-item-tittle">Instagram Story Design 2</p>
+              <p class="portfolio-item-tittle">Instagram Story Design</p>
               <!-- portfolio detail start -->
               <div class="portfolio-item-details">
                 <div class="row">
