--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   </head>
   <body>
     <!-- preloader start -->
-    <!-- <div class="preloader">
+    <div class="preloader">
       <div class="box">
         <div></div>
         <div></div>
         <div></div>
       </div>
-    </div> -->
+    </div>
     <!-- preloader end -->
     <!-- Header -->
     <header class="header">
