--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
             <h2>I'm Angger</h2>
             <h1>Graphic Designer</h1>
             <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
+
+            <a href="#portfolio" class="link-item btn-1 outer-shadow hover-in-shadow">Portfolio</a>
           </div>
           <div class="home-img">
             <div class="img-box inner-shadow">
