add new portfolio

--- a/index.html
+++ b/index.html
@@ -382,6 +382,37 @@
           <!-- portfolio item end -->
 
           <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="random">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project32.png" alt="portfolio" data-screenshots="img/portfolio/large/project-32/1.jpg,img/portfolio/large/project-32/2.jpg,img/portfolio/large/project-32/3.jpg" />
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-tittle">Isometric Room</p>
+              <!-- portfolio detail start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>-</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Brief</h3>
+                    <ul>
+                      <li>Date : <span>2022</span></li>
+                      <li>Client : <span>-</span></li>
+                      <li>Tools : <span>Blender</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio detail end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
           <div class="portfolio-item" data-category="socmed">
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
