--- a/index.html
+++ b/index.html
@@ -156,11 +156,8 @@
             <!-- social link end  -->
           </div>
           <div class="about-info">
-            <p>
-              <span>Hi!My name is Angger,I am a Graphic Designer </span>
-              I am someone who has an interest in Graphic Design, Photography. Becoming someone who is competent in the interests I mentioned above is my dream.
-            </p>
-            <p>Currently I work more in the world of graphic design without putting aside my other interests to continue studying it</p>
+            <p><span>Hello! My name is Angger, I am a Graphic Designer </span>which has an interest in Graphic Design, especially Photography. Being someone who is competent in that interest is my dream.</p>
+            <p>After graduating from school, I expanded my knowledge of Graphic Design and made many works to the best of my ability.</p>
             <a href="https://bit.ly/3CDULjh" target="_blank" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
             <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
           </div>
@@ -281,7 +278,7 @@
             <span class="filter-item" data-target="logo">logo</span>
             <span class="filter-item" data-target="socmed">Social Media</span>
             <span class="filter-item" data-target="T-Shirt">T-Shirt</span>
-            <span class="filter-item" data-target="random">Random</span>
+            <span class="filter-item" data-target="random">etc.</span>
           </div>
         </div>
         <!-- portfolio filter End -->
