--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Personal Portfolio || Angger Riyanto Putra</title>
+    <!-- FavIcon -->
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!-- font awesome -->
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
