--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
             <div class="row">
               <!-- skills item start -->
               <div class="skill-item">
-                <p>Figma</p>
+                <p>Ms.Office</p>
                 <div class="progress inner-shadow">
                   <div class="progress-bar" style="width: calc(50% - 14px)">
-                    <span>50%</span>
+                    <span>80%</span>
                   </div>
                 </div>
               </div>
@@ -193,7 +193,7 @@
                 <p>CorelDraw</p>
                 <div class="progress inner-shadow">
                   <div class="progress-bar" style="width: calc(65% - 14px)">
-                    <span>65%</span>
+                    <span>70%</span>
                   </div>
                 </div>
               </div>
@@ -203,7 +203,7 @@
                 <p>Photoshop</p>
                 <div class="progress inner-shadow">
                   <div class="progress-bar" style="width: calc(60% - 14px)">
-                    <span>60%</span>
+                    <span>65%</span>
                   </div>
                 </div>
               </div>
@@ -212,7 +212,7 @@
                 <p>Adobe Illustator</p>
                 <div class="progress inner-shadow">
                   <div class="progress-bar" style="width: calc(55% - 14px)">
-                    <span>55%</span>
+                    <span>65%</span>
                   </div>
                 </div>
               </div>
