--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
                 <div class="row">
                   <div class="description">
                     <h3>Project Brief</h3>
-                    <p>-</p>
+                    <p>as a microstock contributor, I made this design for my microstock</p>
                   </div>
                   <div class="info">
                     <h3>Project Brief</h3>
